--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ a:active, a:focus, a:visited {
 }
 
 body {
-  padding-top: 2vh;
+  padding-top: 4vh;
   background-color: #e955b0;
 }
 
@@ -35,11 +35,17 @@ body {
           box-shadow: 4px 4px 20px #e955b0;
 }
 
+.num-area_win {
+  background: #fafd4d;
+}
+
 .section {
-  height: 95vh;
+  height: 90vh;
   background-color: #51e2ec;
   padding-top: 6vh;
+  padding: 1rem;
   max-width: 800px;
+  width: 90%;
   margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -48,9 +54,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -59,10 +65,47 @@ body {
           box-shadow: 4px 4px 20px #706a6f;
 }
 
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.manual {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .message {
   font-size: 2em;
   font-weight: bold;
   color: #706a6f;
+  text-align: center;
+}
+
+.message_win {
+  color: #119644;
 }
 
 .number {
@@ -71,35 +114,51 @@ body {
   font-size: 30px;
 }
 
+.controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .btn {
-  margin-top: 2rem;
-  padding: 1rem;
+  margin: 2rem 1rem;
+  padding: 1rem 2rem;
   background-color: #e955b0;
   color: #fff;
   border: none;
   text-transform: uppercase;
   cursor: pointer;
   border-radius: 4px;
-  -webkit-transition: all .5s;
-  transition: all .5s;
+  -webkit-transition: -webkit-transform .5s;
+  transition: -webkit-transform .5s;
+  transition: transform .5s;
+  transition: transform .5s, -webkit-transform .5s;
   font-weight: bold;
+  border: 1.5px solid #e955b0;
 }
 
 .btn:hover {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
+  background-color: #fff;
+  color: #e955b0;
+  border: 1.5px solid #e955b0;
 }
 
 .input {
   margin-top: 3rem;
-  width: 20%;
+  width: 150px;
   padding: 1rem;
   border-radius: 4px;
   font-size: 2em;
   font-weight: bold;
   color: #706a6f;
-  -webkit-transition: all .5s;
-  transition: all .5s;
+  text-align: center;
+  -webkit-transition: all .2s;
+  transition: all .2s;
 }
 
 .input:focus {
@@ -107,4 +166,54 @@ body {
           box-shadow: 4px 4px 20px #706a6f;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+@media (max-width: 550px) {
+  .message {
+    font-size: 1.5em;
+  }
+  .input {
+    font-size: 1.5em;
+    padding: .85em;
+  }
+  .btn {
+    margin: 1rem 0.5rem;
+  }
+}
+
+@media (orientation: landscape) and (max-height: 450px) {
+  .num-area {
+    margin-top: 1rem;
+  }
+  .input {
+    margin-top: 1.5rem;
+  }
+}
+
+@media (orientation: landscape) and (max-height: 400px) {
+  .num-area {
+    margin-top: 1rem;
+  }
+  .input {
+    margin-top: 1.5rem;
+    font-size: 1.5em;
+  }
+  .message {
+    font-size: 1em;
+  }
+  .section {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
