--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,7 +11,7 @@ a
         text-decoration: none
         
 body
-    padding-top: 2vh
+    padding-top: 4vh
     background-color: #e955b0
         
 
@@ -27,25 +27,44 @@ body
     background-color: #51e2ec
     font-size: 3em
     box-shadow: 4px 4px 20px #e955b0
-        
+    &_win
+        background: #fafd4d
 
 .section 
-    height: 95vh
+    height: 90vh
     background-color: #51e2ec
     padding-top: 6vh
+    padding: 1rem
     max-width: 800px
+    width: 90%
     margin: auto
     display: flex
     flex-direction: column
-    justify-content: start
+    justify-content: center
     align-items: center
     border: 2px solid #706a6f
     box-shadow: 4px 4px 20px #706a6f
 
+.header
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+.manual
+
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
 .message
     font-size: 2em
     font-weight: bold
     color: #706a6f
+    text-align: center
+    
+    &_win
+        color: #119644
+
     
 
 
@@ -55,31 +74,70 @@ body
     color: #119644
     font-size: 30px
 
-
+.controls
+    display: flex
+    justify-content: center
 .btn 
-    margin-top: 2rem
-    padding: 1rem
+    margin: 2rem 1rem
+    padding: 1rem 2rem
+    
     background-color: #e955b0
     color: #fff
     border: none
     text-transform: uppercase
     cursor: pointer
     border-radius: 4px
-    transition: all .5s
+    transition: transform .5s
     font-weight: bold
+    border: 1.5px solid #e955b0
     &:hover
         transform: scale(1.2)
+        background-color: #fff
+        color: #e955b0
+        border: 1.5px solid #e955b0
 
 
 .input 
     margin-top: 3rem
-    width: 20%
+    width: 150px
     padding: 1rem
     border-radius: 4px
     font-size: 2em
     font-weight: bold
     color: #706a6f
-    transition: all .5s
+    text-align: center
+    transition: all .2s
     &:focus
         box-shadow: 4px 4px 20px #706a6f
         transform: scale(1.2)
+    
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button 
+    -webkit-appearance: none
+    margin: 0
+
+@media (max-width: 550px)
+    .message
+        font-size: 1.5em
+    .input
+        font-size: 1.5em
+        padding: .85em
+    .btn
+        margin: 1rem 0.5rem
+@media (orientation: landscape) and (max-height: 450px)
+    .num-area
+        margin-top: 1rem
+    .input
+        margin-top: 1.5rem
+@media (orientation: landscape) and (max-height: 400px)
+    .num-area
+        margin-top: 1rem
+    .input
+        margin-top: 1.5rem
+        font-size: 1.5em
+    .message
+        font-size: 1em
+    .section
+        flex-direction: row
+        align-items: center
+        
